# PromptGaurd

./: .dockerignore  .gitignore  Dockerfile  README.md  SPECS.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
node/: eslint.config.js  package-lock.json  package.json  tsconfig.json
node/src/: index.ts  pipeline.ts  policy.ts  sanitize.ts  types.ts
node/src/integrations/: anthropic.ts  express.ts  openai.ts
node/src/server/: index.ts
node/src/stages/: classifier.ts  confusables.ts  intent.ts  normalize.ts  signatures.ts
node/tests/: normalize.test.ts  pipeline.test.ts  policy.test.ts  server.test.ts  signatures.test.ts
python/: pyproject.toml
python/demo/: __init__.py  playground.py
python/eval/: __init__.py  red_team.py  report.py
python/eval/datasets/: seed_attacks.jsonl
python/promptguard/: __init__.py  cli.py  logging.py  pipeline.py  policy.py  sanitize.py  types.py
python/promptguard/integrations/: __init__.py  anthropic.py  decorator.py  openai.py
python/promptguard/server/: __init__.py  __main__.py  app.py  auth.py  config.py  models.py
python/promptguard/stages/: __init__.py  _confusables.py  classifier.py  intent.py  judge.py  normalize.py  rules.yaml  signatures.py
python/tests/: test_classifier.py  test_intent.py  test_normalize.py  test_pipeline.py  test_policy.py  test_red_team.py  test_sanitize.py  test_server.py  test_signatures.py  test_types.py
python/train/: __init__.py  train.py
python/train/datasets/: README.md  sample.jsonl
