[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptguard"
version = "0.1.0"
description = "Runtime prompt-injection defense middleware for LLM applications"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "security", "prompt-injection", "middleware"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = ["pyyaml>=6.0", "types-PyYAML>=6.0"]

[project.scripts]
promptguard = "promptguard.cli:main"

[project.optional-dependencies]
ml = [
    "sentence-transformers>=3.0",
    "transformers>=4.40",
    "torch>=2.2",
    "scikit-learn>=1.4",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["promptguard"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["promptguard", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "RUF", # ruff-specific
]
ignore = ["E501"]  # line length handled by black

[tool.ruff.lint.isort]
known-first-party = ["promptguard"]

[tool.ruff.lint.per-file-ignores]
# _confusables.py is a data file whose entire purpose is to document visually
# ambiguous Unicode characters — suppressing the "ambiguous character" rules is
# correct and intentional here.
"promptguard/stages/_confusables.py" = ["RUF001", "RUF002", "RUF003"]
# Test files use confusable literal chars in attack-string fixtures.
"tests/test_normalize.py" = ["RUF001", "RUF003"]
"tests/test_policy.py" = ["RUF001", "RUF003"]

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------
[tool.black]
target-version = ["py311"]
line-length = 100

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "transformers.*", "sklearn.*", "torch.*", "joblib.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
